[package]
name = "iceprogrs"
version = "0.1.0"
edition = "2021"
authors = ["Berke DURAK <bd@exhrd.fr>"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
description = "SPI-based SRAM programmer for Lattice iCE40 family FPGAs"
repository = "https://github.com/berke/iceprogrs"

[dependencies.spidev]
version = "0.5.1"

[dependencies.gpiod]
# path = "../gpiod-rs" - Bugfix
version = "0.2.2"
features = []
default-features = false

[dependencies.pico-args]
version = "0.4.2"
