[package]
name = "iceprogrs"
version = "0.1.1"
edition = "2021"
authors = ["Berke DURAK <bd@exhrd.fr>"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
description = "SPI-based SRAM programmer for Lattice iCE40 family FPGAs"
repository = "https://github.com/berke/iceprogrs"

[dependencies.spidev]
version = "0.5.1"

[dependencies.gpiod]
version = "^0.2.2"
git = "https://github.com/berke/gpiod-rs" # Awaiting pull request https://github.com/katyo/gpiod-rs/pull/2
branch = "fd-fix"
features = []
default-features = false

[dependencies.pico-args]
version = "0.4.2"
